# gemma-serve

./: .gitmodules  CMakeLists.txt  README.md  test_prompts.txt
src/: batch_inference.cpp  common.cpp  common.h  file_prompt_source.h  inference.cpp  prompt_source.h  single_prompt_source.h
